--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "dev": "webpack --mode=development",
         "build": "webpack --mode=production",
         "watch": "webpack --watch --mode=development",
-        "serve": "http-server -p 9001",
+        "serve": "http-server -p 9001 -c1",
         "start": "npm run watch & npm run serve",
         "pretty": "npx prettier src/**/*.ts --write",
         "release": "node ./scripts/publish.js"
@@ -21,13 +21,13 @@
     "devDependencies": {
         "awesome-typescript-loader": "^5.2.1",
         "css-loader": "^3.5.2",
-        "http-server": "^0.12.1",
+        "http-server": "^14.0.0",
         "prettier": "^2.0.4",
         "style-loader": "^1.1.3",
         "ts-loader": "^6.2.2",
         "typescript": "^3.8.3",
         "webpack": "^4.42.1",
-        "webpack-cli": "^3.3.11"
+        "webpack-cli": "^4.9.1"
     },
     "dependencies": {
         "tsconfig-paths-webpack-plugin": "^3.2.0"
