--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "awesome-typescript-loader": "^5.2.1",
-        "css-loader": "^3.5.2",
+        "@types/node": "^22.19.7",
+        "css-loader": "^7.1.2",
         "http-server": "^14.0.0",
         "prettier": "^2.8.8",
-        "style-loader": "^1.1.3",
-        "ts-loader": "^6.2.2",
-        "typescript": "^3.8.3",
-        "webpack": "^4.42.1",
-        "webpack-cli": "^4.9.1"
+        "style-loader": "^4.0.0",
+        "ts-loader": "^9.5.4",
+        "typescript": "^5.9.3",
+        "webpack": "^5.104.1",
+        "webpack-cli": "^5.1.4"
     },
     "dependencies": {
         "tsconfig-paths-webpack-plugin": "^3.2.0"
