--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
     "name": "tab-strip-control",
-    "version": "1.1.1",
+    "version": "1.2.0",
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "jest",
-        "test:dev": "npx jest --watch",
-        "docs": "npx typedoc",
-        "dev": "webpack --mode=development",
-        "build": "webpack --mode=production",
-        "watch": "webpack --watch --mode=development",
+        "dev": "webpack --config webpack.dev.js",
+        "build": "webpack --config webpack.prod.js",
+        "watch": "webpack --watch --config webpack.dev.js",
         "serve": "http-server -p 9001 -c1",
         "start": "npm run watch & npm run serve",
-        "pretty": "npx prettier src/**/*.ts --write",
-        "release": "node ./scripts/publish.js"
+        "pretty": "npx prettier src/**/*.ts --write"
     },
     "keywords": [],
     "author": "",
@@ -27,7 +23,8 @@
         "ts-loader": "^9.5.4",
         "typescript": "^5.9.3",
         "webpack": "^5.104.1",
-        "webpack-cli": "^5.1.4"
+        "webpack-cli": "^5.1.4",
+        "webpack-merge": "^6.0.1"
     },
     "dependencies": {
         "tsconfig-paths-webpack-plugin": "^3.2.0"
